--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -4,22 +4,24 @@
       <div class="dialog-body">
         <nb-card>
           <nb-card-body>
-           
-                      <form id=“form-buscar-atendimento” [formGroup]="formBuscarAtendimento">
-                         <div class="col-md-12 col-xs-12">
-                           <div class="form-group col-md-4"> 
-                            <h5 class="ml-lg-n3">Atendimento</h5> </div>
-                             <div class="form-row"> 
-                              <div class="form-group col-md-4"> 
-                                <div class="form-group"> <div class="div-medico mb-4"> 
-                                  <label for="medico">Escolha o médico* </label>
-                                   <select class="form-control" id="medico" formControlName="medico"> 
-                                    <option value="{{ listMedico }}" selected>Selecione um Médico</option>
-                                     <option *ngFor="let medico of listMedico" [value]="medico.id"> 
-                                      <!-- use value instead of ngValue --> 
-                                      {{ medico.ID }} {{ medico.name }}
-                                     </option> </select> </div>
-
+            <form id=“form-buscar-atendimento” [formGroup]="formBuscarAtendimento">
+              <div class="col-md-12 col-xs-12">
+                <div class="form-group col-md-4">
+                  <h5 class="ml-lg-n3">Atendimento</h5>
+                </div>
+                <div class="form-row">
+                  <div class="form-group col-md-4">
+                    <div class="form-group">
+                      <div class="div-medico mb-4">
+                        <label for="medico">Escolha o médico* </label>
+                        <select class="form-control" id="medico" formControlName="medico">
+                          <option value="{{ listMedico }}" selected>Selecione um Médico</option>
+                          <option *ngFor="let medico of listMedico" [value]="medico.id">
+                            <!-- use value instead of ngValue -->
+                            {{ medico.ID }} {{ medico.name }}
+                          </option>
+                        </select>
+                      </div>
                       <div class="div-nome">
                         <label for="nome">Buscar por nome</label>
                         <input class="form-control" name="nome" id="nome" type="text" formControlName="nome"
@@ -27,16 +29,17 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form-group col-md-8" >
-                    <label for="nome"  > Informe a Data Inicial e Final *</label>
+                  <div class="form-group col-md-8">
+                    <label for="nome"> Informe a Data Inicial e Final *</label>
                     <div class="div-bucar-periodo mb-4">
                       <div class="form-row">
                         <div class="div-data-inicio col-md-4 px-1">
-                          <input class="form-control date" type="date" id="dataInicio" name="Data Início" [value]="TodayDate"
-                            maxlength="10"/>
+                          <input class="form-control date" type="date" id="dataInicio" name="Data Início"
+                            [value]="TodayDate" maxlength="10" />
                         </div>
                         <div class="div-data-fim col-md-4">
-                          <input class="form-control date" type="date" id="dataFim" name="Data Fim" [value]="FinalDate" maxlength="10" />
+                          <input class="form-control date" type="date" id="dataFim" name="Data Fim" [value]="FinalDate"
+                            maxlength="10" />
                         </div>
                       </div>
                     </div>
@@ -67,7 +70,6 @@
                 <div class="form-row align-items-center">
                   <div class="form-group col-md-12"></div>
                 </div>
-
               </div>
               <div class="form-row align-items-center">
                 <div class="form-group col-md-12">
@@ -116,10 +118,12 @@
                             <button class="btn home-icon" (click)="detalhes(row)" title="Detalhe">
                               <i class="fa fa-info-circle"></i>
                             </button>
-                            <button class="btn home-icon" title="Iniciar atendimento">
+                            <button class="btn home-icon" (click)="iniciarAtendimento(row)" title="Iniciar atendimento"
+                            *ngIf="row.atendimento.status !=='01 - Aguardando Aprovação'">
                               <i class="fa fa-wifi"></i>
                             </button>
-                            <button class="btn home-icon" title="Vídeo atendimento">
+                            <button class="btn home-icon" (click)="videoAtendimento(row)" title="Vídeo atendimento"
+                            *ngIf="row.atendimento.meetingUrl != null">
                               <i class="fa fa-video"></i>
                             </button>
                           </div>
