Ajuste projeto Homologação 31-10

--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -35,11 +35,11 @@
                       <div class="form-row">
                         <div class="div-data-inicio col-md-4 px-1">
                           <input class="form-control date" type="date" id="dataInicio" name="Data Início"
-                            [value]="TodayDate" maxlength="10" />
+                            [value]="TodayDate" maxlength="10" formControlName="dataInicio"/>
                         </div>
                         <div class="div-data-fim col-md-4">
                           <input class="form-control date" type="date" id="dataFim" name="Data Fim" [value]="FinalDate"
-                            maxlength="10" />
+                            maxlength="10" formControlName="dataFim"/>
                         </div>
                       </div>
                     </div>
